[package]
name = "vox_gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-mesh = "0.2.0"
clap = { version = "4.4.6", features = ["derive"] }
dot_vox = { version = "5.1.1", default-features = false }
gltf = { version = "1.3.0", features = ["KHR_materials_emissive_strength", "KHR_materials_ior", "KHR_materials_transmission"] }
log = "0.4.20"
slab = "0.4.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
